up-to-date bis 17.07.

--- a/section3.tex
+++ b/section3.tex
@@ -958,7 +958,7 @@ Für Fehlerschranken fehlen noch untere Schranke $\alpha_{LB} (\mu) \le \alpha (
 Falls $a(\pdot , \pdot ; \mu)$ glm. koerziv bzgl. $\mu$ und $\bar{\alpha} < 0$ bekannt, so ist $\alpha_{LB} (\mu) := \bar{\alpha}$ gültige Wahlmöglichkeit.
 In gewissen Fällen kann eine größere und damit bessere Schranke angegeben werden.
 
-\begin{satz}[``Min-$\Theta$-Verfahren'' zur Berechnung von $\alpha_{LB}(\mu)$]
+\begin{satz}[``Min-$\Theta$-Verfahren'' zur Berechnung von $\alpha_{LB}(\mu)$] \label{3.27}
 	Seien $a^q(u,u) \geq 0 \,\, \forall q,u$ und $\Theta_a^q (\mu) > 0 \,\, \forall \mu$ \\
 	(Offline:) Sei $\alpha(\bar{\mu})$ für ein $\bar{\mu} \in \mathcal{P}$ verfügbar \\
 	(Online:) Setze für $\mu \in \mathcal{P}$
